# bbe-sdk

./: .coverage  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose-acdc.yaml  docker-compose-mnist.yaml  main.py  main_acdc.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/: codecov.yml
.github/workflows/: ci.yml
bbe-sdk/: __init__.py  schemas.py
bbe_sdk/: session.py  types.py
bbe_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bbe_sdk/middleware/: middleware.py
bbe_sdk/pb/: __init__.py
bbe_sdk/proto/: calibration_pb2.py  dataset_pb2.py  dataset_service.proto
bbe_sdk/utils/: logger.py
example_model/: acdc_segmenter.py  image_classifier.py
src/: __init__.py  session.py
src/config/: config.py
src/middleware/: middleware.py
src/models/: __init__.py  errors.py  inputs_format.py  responses.py
src/pb/incomingData/: data_batch_pb2.py  data_batch_pb2_grpc.py
src/pb/outcomingData/: __init__.py  sdk_outcoming_data_pb2.py  sdk_outcoming_data_pb2_grpc.py
src/sdk/: __init__.py  connect.py  incoming_data.py  outcoming_data.py
src/utils/: config.py  data.py
tests/: conftest.py
tests/integration/: test_acdc.py  test_data_processing.py  test_end_to_end.py  test_send_probs.py  test_session_initialization.py
tests/mocks/: auth_server_mock.py  middleware_mock.py  protobuf_fixtures.py
tests/unit/: test_connect.py
tests/utils/: test_helpers.py
utils/: __init__.py  auth.py
