[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbe-sdk"
version = "0.1.0"
description = "Black Box Evaluation SDK to evaluate ML models remotely"
readme = "README.md"
authors = [
    { name="Iñaki Llorens", email="llorensinaki22@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["machine-learning", "evaluation", "grpc", "rabbitmq", "SDK"]
dependencies = [
    "numpy",
    "protobuf>=3.20",
    "grpcio",
    "pika",
    "requests",
    "pydantic"
]
