[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbe_sdk"
version = "0.1.0"
description = "Black Box Evaluation SDK for remote ML model evaluation"
readme = "README.md"
authors = [
    { name="Iñaki Llorens", email="llorensinaki22@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["machine-learning", "evaluation", "grpc", "rabbitmq", "SDK", "black-box", "metrology"]
dependencies = [
    "numpy>=1.21.0",
    "protobuf>=3.20.0",
    "grpcio>=1.50.0",
    "pika>=1.3.0",
    "requests>=2.28.0",
    "pydantic>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/TogetherForABetterAI/bbe-sdk"
Repository = "https://github.com/TogetherForABetterAI/bbe-sdk"
Issues = "https://github.com/TogetherForABetterAI/bbe-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "build>=0.8.0",
    "twine>=4.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bbe_sdk*"]

[tool.setuptools.package-data]
bbe_sdk = ["proto/*.proto"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
